src/objects/Harvest_User__c.object
<CustomObject>
    <fields>
        <fullName>Add_to_all_new_projects_automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to all new projects automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_hourly_rate__c</fullName>
        <label>Default hourly rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harvest_ID__c</fullName>
        <externalId>true</externalId>
        <label>Harvest ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <picklist>
            <picklistValues>
                <fullName>Abu Dhabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almaty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlantic Time (Canada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baghdad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baku</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bogota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brasilia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bratislava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brussels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bucharest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budapest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buenos Aires</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cairo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canberra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde Is.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caracas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Harvest User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Is_Active__c</columns>
        <columns>NAME</columns>
        <columns>First_name__c</columns>
        <columns>Last_name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>Department__c</columns>
        <columns>Default_hourly_rate__c</columns>
        <columns>Timezone__c</columns>
        <columns>Password__c</columns>
        <columns>Add_to_all_new_projects_automatically__c</columns>
        <columns>Is_Admin__c</columns>
        <columns>Is_Contractor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Harvest User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>